config/k8s/paladinswr/00_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: paladinswr
  labels:
    app.kubernetes.io/name: paladinswr
    app.kubernetes.io/part-of: paladinswr
